//package wanyou.game.protocol;

message BceUseProp {
    required int32 propPew = 1;
}
